--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  Hello Angular..!
+  Hello..!
   <!-- 
   <nav class="navbar navbar-default">
     <div class="container-fluid">
